# SingletonPattern

./: CMakeLists.txt  LICENSE  README.md
source/: main.cpp
